@@ -44,6 +44,22 @@
     -->
 
     <listitem>
+      <para>2021-04-28</para>
+      <itemizedlist>
+        <listitem>
+          <para>[bdubbs] - Add manual locales needed for tests
+          if using alternate locale installation instructions. Fixes
+          <ulink url="&lfs-ticket-root;4844">#4844</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Minor changes to boot scripts. Fixes
+          <ulink url="&lfs-ticket-root;4842">#4842</ulink>.
+          Thanks to Scott Andrews for the report.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>2021-04-26</para>
       <itemizedlist>
         <listitem>
