@@ -280,7 +280,11 @@ localedef -i zh_HK -f BIG5-HKSCS zh_HK.BIG5-HKSCS</userinput></screen>
     <para>Then use the <command>localedef</command> command to create and
     install locales not listed in the
     <filename>glibc-&glibc-version;/localedata/SUPPORTED</filename> file
-    in the unlikely case you need them.</para>
+    when you need them. For instance, the following two locales are
+    needed for some tests later in this chapter:</para>
+ 
+<screen role="nodump"><userinput remap="locale-full">localedef -i POSIX -f UTF-8 C.UTF-8 2> /dev/null || true
+localedef -i ja_JP -f SHIFT_JIS ja_JP.SIJS 2> /dev/null || true</userinput></screen>
 
     <note><para>Glibc now uses libidn2 when resolving internationalized 
     domain names.  This is a run time dependency.  If this capability
