@@ -1,3 +1,9 @@
+2021-04-28 Bruce Dubbs <bdubbs@linuxfromscratch.org>
+   * Make check_signal more robust. 
+   * Use a better methog for killproc to remove a dead pid file.
+   * Clarify what signals killproc accepts.
+   * Thanks to input an ddiscussion from Scott Andrews.
+
 2021-02-01 Bruce Dubbs <bdubbs@linuxfromscratch.org>
    * Tweak mountfs to properly exit when an error is found.
 
